Grease pencil eraser size is reset after exiting session #44774

Closed
opened 2015-05-19 17:41:45 +02:00 by Hadrien Brissaud · 6 comments

System Information
Win7x64gtx660m

Blender Version
Broken: 2.74

Short description of error
Grease pencil eraser size is reset after exiting session

Exact steps for others to reproduce the error

  1. Open grease pencil session, change eraser size with mouse wheel
  2. Exit drawing session
  3. Re-enter drawing session, eraser size is back to default
**System Information** Win7x64gtx660m **Blender Version** Broken: 2.74 **Short description of error** Grease pencil eraser size is reset after exiting session **Exact steps for others to reproduce the error** 1. Open grease pencil session, change eraser size with mouse wheel 2. Exit drawing session 3. Re-enter drawing session, eraser size is back to default

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hadrien

Added subscriber: @hadrien

Added subscribers: @JoshuaLeung, @Sergey

Added subscribers: @JoshuaLeung, @Sergey
Joshua Leung was assigned by Sergey Sharybin 2015-05-19 18:13:17 +02:00

@JoshuaLeung, not sure it is supposed to be stored in tool settings or so. Mind having a loot?

@JoshuaLeung, not sure it is supposed to be stored in tool settings or so. Mind having a loot?

This issue was referenced by 389564c711

This issue was referenced by 389564c71177a6e69bd809839753566efe403e16
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44774
No description provided.