Fix T44774: Grease Pencil eraser size reset after exiting session

Previously, it would only save the eraser size if the session ended properly,
instead of being cancelled. However, that wouldn't happen if exiting the session
using Esc.